# Cinder-Samples

./: .gitignore  ToDo.txt  runall.sh
AnalogClock/: CMakeLists.txt
AudioVisualizer/: CMakeLists.txt
BloomingNeon/: CMakeLists.txt  runme.sh
BloomingNeon/src/: BloomingNeonApp.cpp
BouncingBalls/: CMakeLists.txt
DepthOfField/: CMakeLists.txt
Dithering/: CMakeLists.txt
FXAA/: CMakeLists.txt
FXAA/include/: Pistons.h
FlickrImageViewer/: CMakeLists.txt
GeometryShader/: CMakeLists.txt
HexagonMirror/: CMakeLists.txt
OneWorldMultipleWindows/: CMakeLists.txt
PerspectiveWarping/: CMakeLists.txt
PickingByColor/: CMakeLists.txt
PostProcessing/: CMakeLists.txt
SMAA/: CMakeLists.txt
ShaderToy/: CMakeLists.txt
SimpleSceneGraph/: CMakeLists.txt
SimpleShader/: CMakeLists.txt
SmoothDisplacementMapping/: CMakeLists.txt
Stars/: CMakeLists.txt  runall.sh
Stars/src/: Conversions.cpp
TextRendering/: CMakeLists.txt
TextRendering/include/text/: Font.h  Text.cpp  Text.h  TextBox.h
TransparentMesh/: CMakeLists.txt
tools/: CMakeLists.txt  fix_floorf.sh  install_lib_IrrKlang.sh  irrKlang  runme.sh  updateCMakeLists.sh
